# ExamBoard-api

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: ADR-000-time-representation.md  ANALYTICS.md  ARCHITECTURE.md  CAPACITY_LEDGER.md  DATE_TIME.md  DECISIONS.md  DEPLOYMENT.md  LOCAL_DEV.md  MODELS.md  PUBLIC_TIMETABLE.md  SCHEDULING_RULES.md  SEED_DATA.md
src/: .env.example
src/apps/: __init__.py
src/apps/common/: __init__.py  jalali.py  models.py  pagination.py  permissions.py  serializers.py
src/apps/common/tests/: test_jalali.py  test_serializers.py
src/apps/exams/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py  widgets.py
src/apps/exams/management/commands/: load_demo_data.py
src/apps/exams/migrations/: 0001_initial.py
src/apps/exams/templates/admin/widgets/: jalali_date.html  jalali_split_datetime.html
src/apps/exams/tests/: test_api.py  test_management_commands.py  test_models.py
src/apps/health/: __init__.py  apps.py  urls.py  views.py
src/apps/health/tests/: __init__.py  test_health.py
src/config/: settings.py  urls.py
